Post review july (#76)
* fix(frontend): recover queued requests after refresh failure

Reject every request waiting on a failed token refresh, clear the subscriber queue, and always reset the refresh lock so a later request can retry authentication.

Add a concurrent 401 regression test that verifies one failed refresh rejects both callers and a subsequent refresh can recover. Use a root-relative Vite asset base and keep the inspection plugin development-only so production deep links load their assets correctly.

* fix(ai): route conversation compaction results

Map CONVERSATION_COMPACTED events to the backend conversation compaction result routing key so successful summaries reach the existing backend listener instead of failing publication.

Cover both routing-key selection and the actual basic_publish exchange and routing-key arguments with focused regression tests.

* test(backend): restore full-reactor CI coverage

Migrate 44 conversation, job, and resume service tests to the current collaborators while preserving their business assertions. Repair the remaining application test fixtures, constructor wiring, strict Mockito stubs, and test-profile queue and AI endpoint configuration.

Use typed RestTemplate matchers and request captors in infrastructure adapters, align Redis and varargs expectations with production behavior, and correct trigger WebMvc/controller fixtures. Expand CI from the temporary types/domain subset to every non-architecture test, then keep architecture rules in their dedicated gate with AppLayerArchitectureTest explicitly deferred.

* build(release): enforce one authoritative version

Align Maven modules, frontend package metadata and lockfile, AI runtime fallback, backend version fallbacks, and Helm chart metadata with the root VERSION file. Extend the bump script to update every version-bearing source and fail when consistency checks detect drift.

Verify version sources before tagged releases and pass both APP_VERSION and VITE_APP_VERSION